check_output_v2.txt
cargo : warning: 
profiles for the non 
root package will be 
ignored, specify 
profiles at the 
workspace root:
At line:1 char:1
+ cargo check 
--workspace 2>&1 | 
Out-File -FilePath 
check_output_v2.txt ...
+ ~~~~~~~~~~~~~~~~~~~~~~
~~~~~~
    + CategoryInfo      
        : NotSpecified  
  : (warning: profil.   
 ..workspace root::S    
tring) [], RemoteEx    
ception
    + FullyQualifiedErr 
   orId : NativeComman  
  dError
 
package:   C:\Users\ADMI
N\Desktop\remmy-drips\Re
mitwise-Contracts\orches
trator\Cargo.toml
workspace: C:\Users\ADMI
N\Desktop\remmy-drips\Re
mitwise-Contracts\Cargo.
toml
warning: unused 
variable: `event`
   --> remittance_split\
src\lib.rs:875:17
    |
875 |             let 
event = 
SplitCalculatedEvent {
    |                 
^^^^^ help: if this is 
intentional, prefix it 
with an underscore: 
`_event`
    |
    = note: `#[warn(unus
ed_variables)]` (part 
of `#[warn(unused)]`) 
on by default

warning: constant 
`SPLIT_INITIALIZED` is 
never used
  --> remittance_split\s
rc\lib.rs:15:7
   |
15 | const 
SPLIT_INITIALIZED: 
Symbol = 
symbol_short!("init");
   |       
^^^^^^^^^^^^^^^^^
   |
   = note: 
`#[warn(dead_code)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: constant 
`SPLIT_CALCULATED` is 
never used
  --> remittance_split\s
rc\lib.rs:16:7
   |
16 | const 
SPLIT_CALCULATED: 
Symbol = 
symbol_short!("calc");
   |       
^^^^^^^^^^^^^^^^

    Checking 
savings_goals v0.1.0 (C:
\Users\ADMIN\Desktop\rem
my-drips\Remitwise-Contr
acts\savings_goals)
    Checking insurance 
v0.1.0 (C:\Users\ADMIN\D
esktop\remmy-drips\Remit
wise-Contracts\insurance
)
    Checking reporting 
v0.1.0 (C:\Users\ADMIN\D
esktop\remmy-drips\Remit
wise-Contracts\reporting
)
warning: 
`remittance_split` 
(lib) generated 3 
warnings (run `cargo 
fix --lib -p 
remittance_split` to 
apply 1 suggestion)
error: expected item, 
found keyword `let`
    --> insurance\src\li
b.rs:1299:9
     |
1299 |         let 
policy_id = 
client.create_policy(
     |         ^^^
     |         |
     |         `let` 
cannot be used for 
global variables
     |         help: 
consider using `static` 
or `const` instead of 
`let`
     |
     = note: for a full 
list of items that can 
appear in modules, see <
https://doc.rust-lang.or
g/reference/items.html>

error: could not 
compile `insurance` 
(lib) due to 1 previous 
error
warning: build failed, 
waiting for other jobs 
to finish...
warning: unused import: 
`contracterror`
 --> savings_goals\src\l
ib.rs:4:15
  |
4 |     contract, 
contracterror, 
contractimpl, 
contracttype, 
symbol_short, Address, 
Env, Map, String,
  |               
^^^^^^^^^^^^^
  |
  = note: `#[warn(unused
_imports)]` (part of 
`#[warn(unused)]`) on 
by default

error[E0277]: 
`InsurancePolicy` 
doesn't implement 
`Debug`
   --> reporting\src\lib
.rs:311:5
    |
309 | #[derive(Clone, 
Debug)]
    |                 
----- in this derive 
macro expansion
310 | pub struct 
PolicyPage {
311 |     pub items: 
Vec<InsurancePolicy>,
    |     ^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^ the 
trait `Debug` is not 
implemented for 
`InsurancePolicy`
    |
    = note: add 
`#[derive(Debug)]` to 
`InsurancePolicy` or 
manually `impl Debug 
for InsurancePolicy`
help: the trait `Debug` 
is implemented for 
`soroban_sdk::Vec<T>`
   --> C:\Users\ADMIN\.c
argo\registry\src\index.
crates.io-1949cf8c6b5b55
7f\soroban-sdk-21.7.7\sr
c\vec.rs:138:1
    |
138 | / impl<T> Debug 
for Vec<T>
139 | | where
140 | |     T: 
IntoVal<Env, Val> + 
TryFromVal<Env, Val> + 
Debug + Clone,
141 | |     T::Error: 
Debug,
    | 
|____________________^
help: consider 
annotating 
`InsurancePolicy` with 
`#[derive(Debug)]`
    |
294 + #[derive(Debug)]
295 | pub struct 
InsurancePolicy {
    |

warning: constant 
`GOAL_CREATED` is never 
used
  --> savings_goals\src\
lib.rs:14:7
   |
14 | const 
GOAL_CREATED: Symbol = s
ymbol_short!("created");
   |       ^^^^^^^^^^^^
   |
   = note: 
`#[warn(dead_code)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: constant 
`FUNDS_ADDED` is never 
used
  --> savings_goals\src\
lib.rs:15:7
   |
15 | const FUNDS_ADDED: 
Symbol = 
symbol_short!("added");
   |       ^^^^^^^^^^^

warning: constant 
`GOAL_COMPLETED` is 
never used
  --> savings_goals\src\
lib.rs:16:7
   |
16 | const 
GOAL_COMPLETED: Symbol 
= symbol_short!("complet
ed");
   |       
^^^^^^^^^^^^^^

warning: 
`savings_goals` (lib) 
generated 4 warnings 
(run `cargo fix --lib 
-p savings_goals` to 
apply 1 suggestion)
For more information 
about this error, try 
`rustc --explain E0277`.
error: could not 
compile `reporting` 
(lib) due to 1 previous 
error
